class Empleado extends Usuario {
    public Empleado(int id, String nombre, String email, String comprobante) {
        super(id, nombre, email, comprobante);
    }
}