class Estudiante extends Usuario {
	public Estudiante(int id, String nombre, String email, String comprobante) {
		super(id, nombre, email, comprobante);
	}
}
